Add structure to HTML file and style for logo to shrink the image size

--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
     <title>Blackjack</title>
 </head>
 <body>
-   <h1 id="heading-main">Blackjack <img src="assets/images/logo.png" id="logo" alt="logo"></h1>
-   
+    <h1 id="title"><img src="assets/images/logo.png" id="logo" alt="logo"> Blackjack</h1>
+    
+    <main id="game-table">
+        
+        <div id="dealer-hand">
+
+        </div>
+
+        <div id="contols">
+
+        </div>
+
+        <div id="user-hand">
+
+        </div>
+
+        <div id="score-board">
+
+        </div>
+
+    </main>
+
 <script src="assets/js/script.js"></script>
 </body>
 </html>
