Add HTML for score board section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 
         <section id="score-board">
             <h2>Score board</h2>
+            <p class="tally">
+                Wins: <span id="wins">0</span>
+            </p>
+            <p class="tally">
+                Loses: <span id="loses">0</span>
+            </p>
+            <p class="tally">
+                Win Streak: <span id="streak">0</span>
+            </p>
         </section>
 
     </main>
