--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <header>
-        <h1 id="title"><img src="assets/images/logo-start.png" class="logo" alt="logo-start">Blackjack<img src="assets/images/logo-end.png" class="logo" alt="logo-end"></h1>
+        <div id="title">
+            <img src="assets/images/logo-start.png" class="logo" alt="logo-start">
+            <h1> Blackjack </h1>
+            <img src="assets/images/logo-end.png" class="logo" alt="logo-end">
+        </div>
         <nav>
             <button class="btn" id="menu-btn">MENU</button>
         </nav>
@@ -52,7 +56,7 @@
         </section>
 
     </main>
-    <button class="btn" id="reset-btn"></button>
+    <button class="btn" id="reset-btn">Reset Scores</button>
 
 <script src="assets/js/script.js"></script>
 </body>
