Place reset score button in score-board section and add footer container

--- a/index.html
+++ b/index.html
@@ -53,10 +53,14 @@
             <p class="tally">
                 Win Streak: <span id="streak">0</span>
             </p>
+            <button class="btn" id="reset-btn">Reset Scores</button>
         </section>
 
     </main>
-    <button class="btn" id="reset-btn">Reset Scores</button>
+    <footer>
+        
+    </footer>
+    
 
 <script src="assets/js/script.js"></script>
 </body>
