Add social icons to footer and style

--- a/index.html
+++ b/index.html
@@ -58,8 +58,20 @@
 
     </main>
     <footer>
-        
+        <ul class="social-media">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Connect with us on facebook (opens new tab on third party site)"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Connect with us on twitter (opens new tab on third party site)"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="Connect with us on linked in (opens new tab on third party site)"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+        </ul>
     </footer>
+    <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/328aade986.js" crossorigin="anonymous"></script>
     
 
 <script src="assets/js/script.js"></script>
