Set value for picture cards and create array of suits and values

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="contols">
             <h3>User controls</h2>
             <button class="btn" id="hit-btn">HIT ME!</button>
-            <!--how do I make this a pop up modal-->
+            <!-- how do I make this a pop up modal? -->
             <a href="">Game Rules</a>
             <button class="btn" id="stand-btn">STAND</button>
         </section>
