--- a/index.html
+++ b/index.html
@@ -60,13 +60,10 @@
     <footer>
         <ul class="social-media">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Connect with us on facebook (opens new tab on third party site)"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.github.com/dnlbowers" target="_blank" rel="noopener" aria-label="Connect with me via GitHub (opens new tab on third party site)"><i class="fab fa-github"></i></a>
             </li>
             <li>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Connect with us on twitter (opens new tab on third party site)"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="Connect with us on linked in (opens new tab on third party site)"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/dnlbowers/" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fab fa-linkedin-in"></i></a>
             </li>
         </ul>
     </footer>
