--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <title>Blackjack</title>
 </head>
 <body>
-    <header id="title">
-        <img src="assets/images/logo-start.png" class="logo" alt="logo-start">
-        <h1> Blackjack </h1>
-        <img src="assets/images/logo-end.png" class="logo" alt="logo-end">
+    <header>
+        <div id="title">
+            <img src="assets/images/logo-start.png" class="logo" alt="logo-start">
+            <h1> Blackjack </h1>
+            <img src="assets/images/logo-end.png" class="logo" alt="logo-end">
+        </div>
+        <nav id="menu-select">
+            <button data-type="menu" class="btn" id="menu-btn">MENU</button>
+        </nav>
     </header>
-    
+
     <main id="game-table">
         
         <section id="dealer-side">
@@ -34,7 +39,7 @@
             <p class="tally">
                 Win Streak: <span id="streak">0</span>
             </p>
-            <button class="btn" id="reset-btn">Reset Scores</button>
+            <button data-type="reset" class="btn" id="reset-btn">Reset Scores</button>
         </section>
 
         <section id="player-side">
@@ -46,15 +51,11 @@
 
         <section id="contols">
             <h3>User controls</h2>
-            <button class="btn" id="hit-btn">HIT ME!</button>
+            <button data-type="hit" class="btn" id="hit-btn">HIT ME!</button>
             <!-- how do I make this a pop up modal? -->
             <a href="">Game Rules</a>
-            <button class="btn" id="stand-btn">STAND</button>
+            <button data-type="stand" class="btn" id="stand-btn">STAND</button>
         </section>
-
-        <nav>
-            <button class="btn" id="menu-btn">MENU</button>
-        </nav>
 
     </main>
     <footer>
