create a check that compares hands if either hand is blackjack. Add a div in index html which will display the score

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <button data-type="reset" class="btn" id="reset-btn">Reset Scores</button>
         </section>
 
+        <!-- Here will contain a pop up with the result of the round -->
+        <div id="result">
+
+        
+        </div>
+
         <section id="player-side">
             <h2>Player</h2>
             <div id="player-card-container">
