Wrap div around #result and gie a class name of modal-surround in index.html. Add styling for modal surround to style.css

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
         </section>
 
         <!-- Here will contain a pop up with the result of the round -->
-        <div id="result">
+        <div class="modal-surround">
+            <div id="result">
 
-        
+            
+            </div>
         </div>
-
         <section id="player-side">
             <h2>Player</h2>
             <div id="player-card-container">
