add buttons to results modal div in index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
         <div class="modal-surround">
             <div id="result">
 
-            
+                <button class="btn redeal-btn">Deal Again</button>
+                <!-- Quit means return to welcome menu-->
+                <button class="btn menu-btn">Menu</button>
             </div>
         </div>
         <section id="player-side">
