add const ref's querryselectors for results modal and surround

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <!-- Here will contain a pop up with the result of the round -->
         <div class="modal-surround">
-            <div id="result">
+            <div id="result-modal">
 
                 <button class="btn redeal-btn">Deal Again</button>
                 <!-- Quit means return to welcome menu-->
