--- a/index.html
+++ b/index.html
@@ -44,12 +44,18 @@
 
         <!-- Here will contain a pop up with the result of the round -->
         <div class="modal-surround">
-            <div id="result-modal">
+            <section id="result-modal">
+                <h2 id="result-heading">
 
+                </h2>
+                <hr>
+                <p id="result-statement">
+
+                </p>
                 <button class="btn redeal-btn">Deal Again</button>
                 <!-- Quit means return to welcome menu-->
                 <button class="btn menu-btn">Menu</button>
-            </div>
+            </section>
         </div>
         <section id="player-side">
             <h2>Player</h2>
