create results function for player bust

--- a/index.html
+++ b/index.html
@@ -43,19 +43,8 @@
         </section>
 
         <!-- Here will contain a pop up with the result of the round -->
-        <div class="modal-surround">
-            <section id="result-modal">
-                <h2 id="result-heading">
-
-                </h2>
-                <hr>
-                <p id="result-statement">
-
-                </p>
-                <button class="btn redeal-btn">Deal Again</button>
-                <!-- Quit means return to welcome menu-->
-                <button class="btn menu-btn">Menu</button>
-            </section>
+        <div id="modal-surround">
+           
         </div>
         <section id="player-side">
             <h2>Player</h2>
