Add event listener function for redeal button, place section for results modual in HTML file with heading and paragraph and fill in with innerHTML

--- a/index.html
+++ b/index.html
@@ -44,7 +44,19 @@
 
         <!-- Here will contain a pop up with the result of the round -->
         <div id="modal-surround">
-           
+            <section id="result-modal">
+                <h2 id="result">
+
+                </h2>
+                <hr>
+                <p id="description">
+
+                </p>
+                <div>
+                    <button class="btn" id="redeal-btn">Deal Again</button>
+                    <button class="btn menu-btn">Menu</button>
+                </div>
+            </section>   
         </div>
         <section id="player-side">
             <h2>Player</h2>
