correct closing tag for h3 in results section of html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
 
         <section id="score-board">
-            <h3>Score board</h2>
+            <h3>Score board</h3>
             <p class="tally">
                 Wins: <span id="wins">0</span>
             </p>
@@ -46,7 +46,7 @@
         <div id="modal-surround">
             <section id="result-modal">
                 <h2 id="result">
-
+                    placeholder
                 </h2>
                 <hr>
                 <p id="description">
@@ -65,7 +65,7 @@
         </section>
 
         <section id="contols">
-            <h3>User controls</h2>
+            <h3>User controls</h3>
             <button data-type="hit" class="btn" id="hit-btn">HIT ME!</button>
             <!-- how do I make this a pop up modal? -->
             <a href="">Game Rules</a>
