create a general class in CSS called center-element and apply across html document.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1> Blackjack </h1>
             <img src="assets/images/logo-end.png" class="logo" alt="logo-end">
         </div>
-        <nav id="menu-select">
+        <nav class ="centre-element">
             <button data-type="menu" class="btn" id="menu-btn">MENU</button>
         </nav>
     </header>
@@ -44,7 +44,7 @@
 
         <!-- Here will contain a pop up with the result of the round -->
         <div id="modal-surround">
-            <section id="result-modal">
+            <section id="result-modal" class="centre-element">
                 <h2 id="result">
                     placeholder
                 </h2>
@@ -52,7 +52,7 @@
                 <p id="description">
 
                 </p>
-                <div>
+                <div class="centre-element">
                     <button class="btn" id="redeal-btn">Deal Again</button>
                 </div>
             </section>   
