Add fucntions score board to tally wins, loses and draws

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 Loses: <span id="loses">0</span>
             </p>
             <p class="tally">
-                Win Streak: <span id="streak">0</span>
+                Draws: <span id="draws">0</span>
             </p>
             <button data-type="reset" class="btn" id="reset-btn">Reset Scores</button>
         </section>
