remove redundant data-type attributes in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="assets/images/logo-end.png" class="logo" alt="logo-end">
         </div>
         <nav class ="centre-element">
-            <button data-type="menu" class="btn" id="menu-btn">MENU</button>
+            <button class="btn" id="menu-btn">MENU</button>
         </nav>
     </header>
 
@@ -39,7 +39,7 @@
             <p class="tally">
                 Draws: <span id="draws">0</span>
             </p>
-            <button data-type="reset" class="btn" id="reset-btn">Reset Scores</button>
+            <button class="btn" id="reset-btn">Reset Scores</button>
         </section>
 
         <!-- Here will contain a pop up with the result of the round -->
@@ -66,10 +66,10 @@
 
         <section id="contols">
             <h3>Player Controls</h3>
-            <button data-type="hit" class="btn" id="hit-btn">HIT ME!</button>
+            <button class="btn" id="hit-btn">HIT ME!</button>
             <!-- how do I make this a pop up modal? -->
             <a href="">Game Rules</a>
-            <button data-type="stand" class="btn" id="stand-btn">STAND</button>
+            <button class="btn" id="stand-btn">STAND</button>
         </section>
 
     </main>
