Add global constants form button elements relating to the scoreboard and add event listener to the reset score button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 Loses: <span id="loses">0</span>
             </p>
             <p class="tally">
-                Draws: <span id="draws">0</span>
+                Drawn: <span id="drawn">0</span>
             </p>
             <button class="btn" id="reset-btn">Reset Scores</button>
         </section>
