--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+    - differentiate buttons on table and off table
+    - add menu modal
+    - figure out why the copyright icon in footer isn't working from font awesome.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -73,15 +78,16 @@
         </section>
 
     </main>
-    <footer>
-        <ul class="social-media">
-            <li>
-                <a href="https://www.github.com/dnlbowers" target="_blank" rel="noopener" aria-label="Connect with me via GitHub (opens new tab on third party site)"><i class="fab fa-github"></i></a>
+    <footer class="centre-element">
+        <ul>
+            <li class="social-media-li">
+                <a href="https://www.github.com/dnlbowers" target="_blank" rel="noopener" aria-label="Connect with me via GitHub (opens new tab on third party site)"><i class="fab fa-github social-icon"></i></a>
             </li>
-            <li>
-                <a href="https://www.linkedin.com/in/dnlbowers/" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fab fa-linkedin-in"></i></a>
+            <li class="social-media-li">
+                <a href="https://www.linkedin.com/in/dnlbowers/" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fab fa-linkedin-in social-icon"></i></a>
             </li>
         </ul>
+        <p class="centre-element"><i class="fa-solid fa-copyright"></i></i></i>Copy right of dnlbowers</p>
     </footer>
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/328aade986.js" crossorigin="anonymous"></script>
