--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
 
         <section id="score-board">
             <h3>Score board</h3>
-            <p class="tally">
-                Wins: <span id="wins">0</span>
-            </p>
-            <p class="tally">
-                Loses: <span id="loses">0</span>
-            </p>
-            <p class="tally">
-                Drawn: <span id="drawn">0</span>
-            </p>
+            <ul>    
+                <li class="score-tally">
+                    Wins: <span id="wins">0</span>
+                </li>
+                <li class="score-tally">
+                    Loses: <span id="loses">0</span>
+                </li>
+                <li class="score-tally">
+                    Drawn: <span id="drawn">0</span>
+                </li>
+            </ul>
             <button class="btn" id="reset-btn">Reset Scores</button>
         </section>
 
