create main menu and add event listeners to allow the user to toggle between gameplay and the menu

--- a/index.html
+++ b/index.html
@@ -19,12 +19,19 @@
             <h1> Blackjack </h1>
             <img src="assets/images/logo-end.png" class="logo" alt="logo-end">
         </div>
-        <nav class ="centre-element">
+        <nav class ="text-align-centre">
             <button class="btn" id="menu-btn">MENU</button>
         </nav>
     </header>
 
-    <main id="game-table" class="centre-element">
+    <nav id="main-menu" class="center-margin">
+        <button id="play-game-btn" class="menu-opt-btn">Play Game</button>
+        <button id="game-rules-btn" class="menu-opt-btn">Game Rules</button>
+        <button id="game-options-btn" class="menu-opt-btn">Game Options</button>
+        <button id="rg-btn" class="menu-opt-btn">Responsible Gaming</button>
+    </nav>
+
+    <main id="game-table" class="text-align-centre">
         
         <section id="dealer-side">
             <h2>House Hand</h2>
@@ -80,7 +87,9 @@
         </section>
 
     </main>
-    <footer class="centre-element">
+
+
+    <footer class="text-align-centre">
         <ul>
             <li class="social-media-li">
                 <a href="https://www.github.com/dnlbowers" target="_blank" rel="noopener" aria-label="Connect with me via GitHub (opens new tab on third party site)"><i class="fab fa-github social-icon"></i></a>
@@ -89,7 +98,7 @@
                 <a href="https://www.linkedin.com/in/dnlbowers/" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fab fa-linkedin-in social-icon"></i></a>
             </li>
         </ul>
-        <p class="centre-element"><i class="fa-solid fa-copyright"></i></i></i>Copy right of dnlbowers</p>
+        <small class="centre-element"><i class="fa-solid fa-copyright"></i></i></i>Copyright of dnlbowers</small>
     </footer>
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/328aade986.js" crossorigin="anonymous"></script>
