make play game button change to return to game button when menu is opened fromt the game table

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
     <nav id="main-menu" class="center-margin">
         <button id="play-game-btn" class="menu-opt-btn">Play Game</button>
-        <button id="game-rules-btn" class="menu-opt-btn">Game Rules</button>
-        <button id="game-options-btn" class="menu-opt-btn">Game Options</button>
-        <button id="rg-btn" class="menu-opt-btn">Responsible Gaming</button>
+        <button id="game-rules-btn" class="menu-opt-btn">GAME RULES</button>
+        <button id="game-options-btn" class="menu-opt-btn">GAME OPTIONS</button>
+        <button id="rg-btn" class="menu-opt-btn">RESPONSIBLE Gaming</button>
     </nav>
 
     <main id="game-table" class="text-align-centre">
