add heading to the menu modal and centre it

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!--
     - differentiate buttons on table and off table
-    - add menu modal
-    - figure out why the copyright icon in footer isn't working from font awesome.
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -25,6 +23,7 @@
     </header>
 
     <nav id="main-menu" class="center-margin">
+        <h2 class="text-align-centre">Main Menu</h2>
         <button id="play-game-btn" class="menu-opt-btn">Play Game</button>
         <button id="game-rules-btn" class="menu-opt-btn">GAME RULES</button>
         <button id="game-options-btn" class="menu-opt-btn">GAME OPTIONS</button>
