capiltalise text in menu buttons, add article tag for the game rules to go into and create style selector for the main-windows(module)

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         </nav>
     </header>
 
-    <nav id="main-menu" class="center-margin">
+    <nav id="main-menu" class="center-margin main-window">
         <h2 class="text-align-centre">Main Menu</h2>
-        <button id="play-game-btn" class="menu-opt-btn">Play Game</button>
+        <button id="play-game-btn" class="menu-opt-btn">PLAY GAME</button>
         <button id="game-rules-btn" class="menu-opt-btn">GAME RULES</button>
         <button id="game-options-btn" class="menu-opt-btn">GAME OPTIONS</button>
-        <button id="rg-btn" class="menu-opt-btn">RESPONSIBLE Gaming</button>
+        <button id="rg-btn" class="menu-opt-btn">RESPONSIBLE GAMING</button>
     </nav>
 
-    <main id="game-table" class="text-align-centre">
+    <main id="game-table" class="text-align-centre main-window">
         
         <section id="dealer-side">
             <h2>House Hand</h2>
@@ -86,6 +86,10 @@
         </section>
 
     </main>
+
+    <article id="game-rules" class="main-window">
+
+    </article>
 
 
     <footer class="text-align-centre">
