Add containers in the gamesrules article and create content in gameRuleContent function to be appended upon button click from the menu

--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
     </main>
 
     <article id="game-rules" class="main-window">
+        <section id="game-rules-content">
 
+        </section>
+        <nav>
+            <button class="back-to-menu">MAIN MENU</button>
+        </nav>
     </article>
 
 
