Add event listners to game rules button in the main menu button arrange global const list

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     </main>
 
-    <article id="game-rules" class="main-window">
+    <article id="game-rules" class="main-window center-margin text-align-centre">
         <section id="game-rules-content">
 
         </section>
