replace the c in copyright with the copyright icon

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <a href="https://www.linkedin.com/in/dnlbowers/" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fab fa-linkedin-in social-icon"></i></a>
             </li>
         </ul>
-        <small class="centre-element"><i class="fa-solid fa-copyright"></i></i></i>Copyright of dnlbowers</small>
+        <small class="centre-element"><i class="fa-solid fa-copyright"></i>opyright of dnlbowers</small>
     </footer>
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/328aade986.js" crossorigin="anonymous"></script>
