refactor code so that container used rule will be useable by all sub menus

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 
     </main>
 
-    <article id="game-rules" class="main-window center-margin text-align-centre">
-        <section id="game-rules-content">
-
+    <article id="sub-menu-container" class="main-window center-margin text-align-centre">
+        <section id="sub-menu-content">
+            <h3>placeholder</h3>
         </section>
         <nav>
             <button class="back-to-menu">MAIN MENU</button>
