Change Fontawesome to be linked via CDN to fix the copyright logo appearing as a square

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <title>Blackjack</title>
 </head>
 <body>
@@ -106,11 +107,10 @@
                 <a href="https://www.linkedin.com/in/dnlbowers/" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fab fa-linkedin-in social-icon"></i></a>
             </li>
         </ul>
-        <small class="centre-element"><i class="fa-solid fa-copyright"></i>opyright of dnlbowers</small>
-    </footer>
-    <!-- font awesome script-->
-    <script src="https://kit.fontawesome.com/328aade986.js" crossorigin="anonymous"></script>
-    
+        <small>
+            <i class="fa-solid fa-copyright">opyright of dnlbowers</i>
+        </small>
+    </footer>    
 
 <script src="assets/js/script.js"></script>
 </body>
