add no script tag to index.html

--- a/index.html
+++ b/index.html
@@ -113,5 +113,9 @@
     </footer>    
 
 <script src="assets/js/script.js"></script>
+<noscript>
+    Your browser either does not support JavaScript, or it is not enabled! If you wish to play this game, then 
+    either change your browser or enable it for the use of JavaScript.
+  </noscript>
 </body>
 </html>
