Amend typo pm RG sub menu. Change FA icons and change font size

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     <footer class="text-align-centre">
         <ul>
             <li class="social-media-li">
-                <a href="https://www.github.com/dnlbowers" target="_blank" rel="noopener" aria-label="Connect with me via GitHub (opens new tab on third party site)"><i class="fab fa-github social-icon"></i></a>
+                <a href="https://www.github.com/dnlbowers" target="_blank" rel="noopener" aria-label="Connect with me via GitHub (opens new tab on third party site)"><i class="fa-brands fa-github-square social-icon"></i></a>
             </li>
             <li class="social-media-li">
-                <a href="https://www.linkedin.com/in/dnlbowers/" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fab fa-linkedin-in social-icon"></i></a>
+                <a href="https://www.linkedin.com/in/dnlbowers/" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fa-brands fa-linkedin social-icon"></i></a>
             </li>
         </ul>
         <small>
