Remove gametable padding class, change gametable from block to flex in the when the click event from the menu is activated. Change height of the body from % to VH and add a width in vw

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- Menu button in the header visible only from the game table to navigate to the menu -->
         <nav class ="text-align-centre">
-            <button class="btn" id="menu-btn">MENU</button>
+            <button class="btn center-margin" id="menu-btn">MENU</button>
         </nav>
     </header>
 
