Add fontsize to the copy right, remove padding from title and height from header

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <a href="https://www.linkedin.com/in/dnlbowers/" target="_blank" rel="noopener" aria-label="Connect with me via linked in (opens new tab on third party site)"><i class="fa-brands fa-linkedin social-icon"></i></a>
             </li>
         </ul>
-        <small>
+        <small id="copyright">
             <i class="fa-solid fa-copyright">opyright of dnlbowers</i>
         </small>
     </footer>    
