Use display: flex when retuning elements back to the DOM (visually). Make everything fix on a mobile screen with no scroll by adding height to header, removing all padding except for main window class, and resizing the main window

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </article>
     
     <!-- Game area -->
-    <main id="game-table" class="text-align-centre main-window">       
+    <main id="game-table" class="text-align-centre main-window center-margin">       
         
         <!-- Container for dealers cards-->
         <section id="dealer-side" class="table-section-pad">
