fix several typos, change header height and add padding to inner elements

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
 
         <!-- Menu button in the header visible only from the game table to navigate to the menu -->
-        <nav class ="text-align-centre">
-            <button class="btn center-margin" id="menu-btn">MENU</button>
+        <nav id="menu-wrap" class ="text-align-centre">
+            <button id="menu-btn" class="btn center-margin">MENU</button>
         </nav>
     </header>
 
