--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
     <main id="game-table" class="text-align-centre main-window center-margin">       
         
         <!-- Container for dealers cards-->
-        <section id="dealer-side" class="table-section-pad">
+        <section id="dealer-side">
             <h2>House Hand</h2>
-            <div id="dealer-card-container">
+            <div id="dealer-card-container" class="card-container">
 
             </div>
         </section>
 
         <!-- Scoreboard -->
-        <section id="score-board" class="table-section-pad">
+        <section id="score-board">
             <h3>Score board</h3>
             <ul>    
                 <li class="score-tally">
@@ -91,20 +91,20 @@
         </div>
 
         <!-- Container for players hand -->
-        <section id="player-side" class="table-section-pad">
+        <section id="player-side">
             <h2>Player Hand</h2>
-            <div id="player-card-container">
+            <div id="player-card-container" class="card-container">
 
             </div>
         </section>
 
         <!-- Users control section -->
-        <section id="contols" class="table-section-pad">
+        <section id="contols">
             <h3>Player Controls</h3>
-            <button class="btn" id="hit-btn">HIT ME!</button>
+            <button class="btn" id="hit-btn"><span class="btn-underline">H</span>IT ME!</button>
             <!-- how do I make this a pop up modal? -->
             <a href="">Game Rules</a>
-            <button class="btn" id="stand-btn">STAND</button>
+            <button class="btn" id="stand-btn"><span class="btn-underline">S</span>TAND</button>
         </section>
     </main>
 
