style buttons further

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     </nav>
 
     <!-- Container for sub menus -->
-    <article id="sub-menu-container" class="main-window center-margin text-align-centre">
+    <article id="sub-menu-container" class="main-window center-margin text-align-centre txt-white">
         <section id="sub-menu-content">
             <h3>placeholder</h3>
         </section>
         <!-- Button to navigate back to the navigation menu -->
         <nav>
-            <button class="back-to-menu btn-bg">MAIN MENU</button>
+            <button class="back-to-menu btn-bg btn">MAIN MENU</button>
         </nav>
     </article>
     
