start styling the results modal

--- a/index.html
+++ b/index.html
@@ -80,12 +80,11 @@
                 <h2 id="result">
                     placeholder
                 </h2>
-                <hr>
                 <p id="description">
 
                 </p>
                 <div>
-                    <button class="btn" id="redeal-btn">Deal Again</button>
+                    <button class="btn btn-bg center-margin" id="redeal-btn">Deal Again</button>
                 </div>
             </section>   
         </div>
