space control buttons and add padding to the game table. adjust min size to suit

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <main id="game-table" class="text-align-centre main-window center-margin txt-white">       
             
             <!-- Container for dealers cards-->
-            <section id="dealer-side">
+            <section id="dealer-side" class="line-break-below">
                 <h2>House Hand</h2>
                 <div id="dealer-card-container" class="card-container">
 
@@ -59,9 +59,9 @@
             </section>
 
             <!-- Scoreboard -->
-            <section id="score-board">
-                <h3>Score board</h3>
-                <ul>    
+            <section id="score-board" class="line-break-below">
+                <h3 class="line-break-below">Score board</h3>
+                <ul class="line-break-below">    
                     <li class="score-tally">
                         Wins: <span id="wins">0</span>
                     </li>
@@ -99,8 +99,8 @@
             </section>
 
             <!-- Users control section -->
-            <section id="contols">
-                <h3>Player Controls</h3>
+            <section id="contols" class="line-break-below">
+                <h3 class="line-break-below">Player Controls</h3>
                 <button class="btn btn-bg" id="hit-btn"><span class="btn-underline">H</span>IT ME!</button>
                 <!-- how do I make this a pop up modal? -->
                 <a href="">Game Rules</a>
