add functionality to the game rules anchor on the game table

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h3 class="line-break-below">Player Controls</h3>
                 <button class="btn btn-bg" id="hit-btn"><span class="btn-underline">H</span>IT ME!</button>
                 <!-- how do I make this a pop up modal? -->
-                <a href="">Game Rules</a>
+                <a id="rules">Game Rules</a>
                 <button class="btn btn-bg" id="stand-btn"><span class="btn-underline">S</span>TAND</button>
             </section>
         </main>
