Add running total to player hand so it shows on the DOM

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 <div id="player-card-container" class="card-container">
                 
                 </div>
+                <p>Total = <span id="player-total">0</span></p>
             </section>
 
             <!-- Users control section -->
