add key down event for redeal button and underline the d

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                     </p>
                     <div>
-                        <button class="btn btn-bg center-margin" id="redeal-btn">Deal Again</button>
+                        <button class="btn btn-bg center-margin" id="redeal-btn"><span class="underline">D</span>eal Again</button>
                     </div>
                 </section>   
             </div>
