add favicon and a aria label to the rame rules anchor on index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
     <title>Blackjack</title>
 </head>
 <body>
@@ -105,7 +106,7 @@
                 <h3 class="line-break-below">Player Controls</h3>
                 <button class="btn btn-bg" id="hit-btn"><span class= "key-control-indicator">H</span>IT ME!</button>
                 <!-- how do I make this a pop up modal? -->
-                <a id="rules-anchor">Game Rules</a>
+                <a id="rules-anchor" aria-label = "Takes you to the game rules">Game Rules</a>
                 <button class="btn btn-bg" id="stand-btn"><span class= "key-control-indicator">S</span>TAND</button>
             </section>
         </main>
