Simplify menu titles, make eventlistener contian functions to avoid repetition

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <!-- Menu navigation menu -->
         <nav id="main-menu" class="center-margin main-window txt-white">
             <h2 class="text-align-centre">Main Menu</h2>
-            <button id="play-game-btn" class="menu-opt-btn btn-bg">PLAY GAME</button>
-            <button id="game-rules-btn" class="menu-opt-btn btn-bg">GAME RULES</button>
-            <button id="game-options-btn" class="menu-opt-btn btn-bg">GAME OPTIONS</button>
-            <button id="rg-btn" class="menu-opt-btn btn-bg">RESPONSIBLE GAMING</button>
+            <button id="play-game-btn" class="menu-opt-btn btn-bg">CARD <span class="key-control-indicator">T</span>ABLE</button>
+            <button id="game-rules-btn" class="menu-opt-btn btn-bg">GAME <span class="key-control-indicator">R</span>ULES</button>
+            <button id="game-options-btn" class="menu-opt-btn btn-bg"><span class="key-control-indicator">O</span>PTIONS</button>
+            <button id="rg-btn" class="menu-opt-btn btn-bg">RESPONSIBLE <span class="key-control-indicator">G</span>AMING</button>
         </nav>
 
         <!-- Container for sub menus -->
@@ -74,7 +74,7 @@
                         Drawn: <span id="drawn">0</span>
                     </li>
                 </ul>
-                <button class="btn btn-bg" id="reset-btn"><span class="key-control-indicator">R</span>eset Scores</button>
+                <button class="btn btn-bg" id="reset-btn"><span class="key-control-indicator">C</span>EAR TALLY</button>
             </section>
 
             <!-- Results Modal with transparent back gorund -->
