start styling and introducing media queries

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <!-- Menu button in the header visible only from the game table to navigate to the menu -->
-        <nav id="menu-wrap" class ="text-align-centre">
+        <nav id="menu-btn-wrap" class ="text-align-centre">
             <button id="menu-btn" class="btn center-margin btn-bg"><span class="key-control-indicator">M</span>ENU</button>
         </nav>
     </header>
@@ -31,7 +31,7 @@
     <div id="main-surround" class="center-margin">
         <!-- Menu navigation menu -->
         <nav id="main-menu" class="center-margin main-window txt-white">
-            <h2 class="text-align-centre">Main Menu</h2>
+            <h2 class="text-align-centre menu-heading">Main Menu</h2>
             <button id="play-game-btn" class="menu-opt-btn btn-bg">CARD <span class="key-control-indicator">T</span>ABLE</button>
             <button id="game-rules-btn" class="menu-opt-btn btn-bg">GAME <span class="key-control-indicator">R</span>ULES</button>
             <button id="game-options-btn" class="menu-opt-btn btn-bg"><span class="key-control-indicator">O</span>PTIONS</button>
@@ -45,7 +45,7 @@
             </section>
             <!-- Button to navigate back to the navigation menu -->
             <nav>
-                <button class="back-to-menu btn-bg btn">MAIN MENU</button>
+                <button class="back-to-menu btn-bg btn">MAIN <span class="key-control-indicator">M</span>ENU</button>
             </nav>
         </article>
         
