reorganise style selectors add some missing ones and continue with changing style for larger screen sizes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         Drawn: <span id="drawn">0</span>
                     </li>
                 </ul>
-                <button class="btn btn-bg" id="reset-btn"><span class="key-control-indicator">C</span>EAR TALLY</button>
+                <button class="btn btn-bg" id="reset-btn"><span class="key-control-indicator">C</span>LEAR TALLY</button>
             </section>
 
             <!-- Results Modal with transparent back gorund -->
@@ -102,7 +102,7 @@
             </section>
 
             <!-- Users control section -->
-            <section id="contols" class="line-break-below">
+            <section id="controls" class="line-break-below">
                 <h3 class="line-break-below">Player Controls</h3>
                 <button class="btn btn-bg" id="hit-btn"><span class= "key-control-indicator">H</span>IT ME!</button>
                 <!-- how do I make this a pop up modal? -->
