remove the transparent background from the reult modal, add referecen to the result modal get elements and use this to iniate the game. Add Key board controls to the game rules

--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
             </section>
 
             <!-- Results Modal with transparent back gorund -->
-            <div id="modal-surround">
+            <!--<div id="modal-surround">-->
                 <section id="result-modal">
                     <h2 id="result">
-                        placeholder
+                        Ready to Play?
                     </h2>
                     <p id="description">
-
+                        Then click the button and lets get going!
                     </p>
                     <div>
-                        <button class="btn btn-bg center-margin" id="redeal-btn"><span class="key-control-indicator">D</span>eal Again</button>
+                        <button class="btn btn-bg center-margin" id="redeal-btn"><span class="key-control-indicator">D</span>eal Me In</button>
                     </div>
                 </section>   
-            </div>
+            <!--</div>-->
 
             <!-- Container for players hand -->
             <section id="player-side">
